--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "devDependencies": {
         "autoprefixer": "^9.8.4",
         "axios": "^0.19",
-        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
-        "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
@@ -25,6 +23,5 @@
         "vue-template-compiler": "^2.6.10",
         "tailwindcss": "^1.4.6"
     },
-    "dependencies": {
-    }
+    "dependencies": {}
 }
