--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/utils.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         },
